# cmdop-sdk

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
docs/: agent.md  auth.md  base_model.md  download.md  files.md  skills.md  terminal.md
examples/: README.md  agent_structured.py  browser_automation.py  file_operations.py  fleet_status.py  skills.py  terminal_ssh.py
node/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.e2e.config.ts
node/scripts/: print-surface.ts
node/src/: _parity.ts  client.ts  config.ts  errors.ts  index.ts  locate.ts  streaming.ts  transport.ts  types.ts
node/src/_proto/cmdop/core/v1/: common_pb.ts  envelope_pb.ts  fleets_pb.ts  keys_pb.ts  machines_pb.ts  schedules_pb.ts  skills_pb.ts  tunnels_pb.ts
node/src/resources/: base.ts  fleets.ts  keys.ts  machines.ts  schedules.ts  skills.ts  tunnels.ts
node/tests/: config.test.ts  locate.test.ts  parity.test.ts  skills.test.ts  transport.test.ts
python/: .gitignore  README.md  pyproject.toml
python/scripts/: print_surface.py
python/src/cmdop/: __init__.py  _locate.py  _transport.py  client.py  config.py  errors.py  streaming.py  types.py
python/src/cmdop/_proto/cmdop/core/v1/: common_pb2.py  common_pb2.pyi  envelope_pb2.py  envelope_pb2.pyi  fleets_pb2.py  fleets_pb2.pyi  keys_pb2.py  keys_pb2.pyi  machines_pb2.py  machines_pb2.pyi  schedules_pb2.py  schedules_pb2.pyi  skills_pb2.py  skills_pb2.pyi  tunnels_pb2.py  tunnels_pb2.pyi
python/src/cmdop/resources/: __init__.py  base.py  fleets.py  keys.py  machines.py  schedules.py  skills.py  tunnels.py
python/tests/: test_config.py  test_locate.py  test_parity.py  test_skills.py  test_transport.py
src/cmdop/: __init__.py  client.py  exceptions.py
src/cmdop/_generated/: rpc_messages_pb2.pyi  service_pb2.py  service_pb2_grpc.py
src/cmdop/grpc/proto/: agent_messages.proto  control_messages.proto
src/cmdop/grpc/proto/rpc_messages/: skills.proto
src/cmdop/helpers/: __init__.py  desktop.py
src/cmdop/models/: agent.py
src/cmdop/proto/: service.proto
src/cmdop/proto/rpc_messages/: agent.proto
src/cmdop/services/: __init__.py  files.py
src/cmdop/services/agent/: async_.py
src/cmdop/services/browser/service/: sync.py
src/cmdop/services/download/: _aio.py
src/cmdop/services/skills/: async_.py
src/cmdop/services/terminal/: _async.py  _sync.py
src/cmdop/services/terminal/tui/: ssh.py
src/cmdop/streaming/: terminal.py
src/cmdop/transport/: remote.py
tests/: __init__.py  conftest.py  test_agent.py  test_base_service.py  test_cli.py  test_client.py  test_exceptions.py  test_extract.py  test_files_service.py  test_local_transport.py  test_models.py  test_remote_discovery.py  test_sdk_config.py  test_skills.py  test_streaming.py  test_terminal_service.py  test_transport.py
tests/browser/: __init__.py  conftest.py  test_async.py  test_extract.py  test_interaction.py  test_js.py  test_navigation.py  test_service.py  test_session.py  test_state.py
tests/download/: __init__.py  conftest.py  test_config.py  test_models.py  test_service.py  test_transfer.py
tests/integration/: __init__.py  test_extract_integration.py
tests/streaming/: __init__.py  test_mfa.py  test_terminal.py
tests/terminal/: __init__.py  test_service.py
tests/terminal/tui/: __init__.py  test_emulator.py  test_modes.py  test_ssh.py
