[project]
name = "cmdop"
version = "0.1.40"
description = "Python SDK for CMDOP agent interaction"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "CMDOP Team" }]
keywords = ["cmdop", "terminal", "agent", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    # gRPC
    "grpcio>=1.78.0",
    "protobuf>=5.29.0",
    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    # HTTP client for agent discovery
    "httpx>=0.27.0",
    # CLI & Logging
    "click>=8.1.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.14.3",
    # TUI terminal support
    "pyte>=0.8.2",
    "textual>=0.50.0",
]

[project.optional-dependencies]
# Legacy optional-dependencies (for pip compatibility)
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "grpcio-tools>=1.78.0",
]

# uv dependency groups (PEP 735)
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "grpcio-tools>=1.78.0",
]

[project.scripts]
cmdop = "cmdop.cli:main"

[project.urls]
Homepage = "https://cmdop.com"
Documentation = "https://cmdop.com/docs/"
Repository = "https://github.com/commandoperator/cmdop-sdk"
Issues = "https://github.com/commandoperator/cmdop-sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cmdop"]
exclude = [
    "src/cmdop/proto",
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/cmdop",
    "README.md",
    "LICENSE",
    "py.typed",
]
exclude = [
    "src/cmdop/proto",
    "tests",
    "examples",
    "devops",
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.md",
    "**/.coverage",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/.ruff_cache",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=cmdop --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cmdop"]
